tests/cases/syntax/error/declaration/too-many-processes.soccam
;; too-many-processes.soccam
;; Tests: A decl should only have one subprocess.
(module too-many-processes soccam
  (decl ([x int])
    (:= x 1)
    (:= x 1)
    (:= x 1))
)
